# audionab-pro

./: .gitignore  CMakeLists.txt  LICENSE  audionab.manifest  audionab.rc  build.bat  installer.iss
.github/workflows/: release.yml
src/: app.cpp  app.h  config.cpp  config.h  constants.h  context_menu.cpp  context_menu.h  converter.cpp  converter.h  database.cpp  database.h  helpers.cpp  helpers.h  main.cpp  transcriber.cpp  transcriber.h  tray.cpp  tray.h  watcher.cpp  watcher.h
src/ui/: controls.cpp  controls.h  dropdown.cpp  dropdown.h  renderer.cpp  renderer.h  theme.h
